--- a/blogpost.html
+++ b/blogpost.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El titulo del post</title>
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
-    <h1>Aqui vamos a hacer un blogpost</h1>
-    <p>Y este es el parrafo de inicio</p>
-</body>
+    <link rel="stylesheet" href="css/estilos.css" />
+  </head>
+  <body>
+    <div>
+      <h1>Aqui vamos a hacer un blogpost</h1>
+      <p>Y este es el parrafo de inicio</p>
+    </div>
+    <div>
+        <h1>Aqui va el segundo blogpost</h1>
+        <p>Y este es el parrafo del segundo post</p>
+    </div>
+  </body>
 </html>
-    
