--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>
-          Y este es el párrafo de inicio donde vamos a explicar las cosas que se
+          Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas que se
           pueden hacer con las ramas
         </p>
         <p>
